# fastmcp-otel-langfuse

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
weather_assistant/: __init__.py  client.py  server.py
weather_assistant/config/: __init__.py  tracing.py
weather_assistant/utils/: __init__.py  otel_utils.py
